--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ShellApiLogOptimizer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ShellApiLogOptimizer</name>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
