fix: 支持动态索引传入

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.servlet.context-path=/shellApiLogOptimizer
 api.version=service
 
 easy-es.enable=true
-easy-es.address=205.189.160.78:9200
+easy-es.address=localhost:9200
 easy-es.username=elastic
 easy-es.password=YourElasticPassword
