feat: 增加访问秘钥 确保数据安全

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.servlet.context-path=/shellApiLogOptimizer
 api.version=service
+api.auth.token=your_secret_token_here
 
 easy-es.enable=true
 easy-es.address=localhost:9200
