--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>link.shellgpt</groupId>
+	<groupId>ltd.shellapi.plugin</groupId>
 	<artifactId>ShellApiLogOptimizer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ShellApiLogOptimizer</name>
