fix: github actions

--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,12 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<!--suppress UnresolvedMavenProperty -->
+			<url>https://maven.pkg.github.com/${GITHUB_REPOSITORY}</url>
+		</repository>
+	</distributionManagement>
 </project>
