--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,15 +24,14 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages
-      run: |
-        mvn deploy:deploy-file \
-        -DgroupId=com.github.${{ github.repository_owner }} \
-        -DartifactId=ShellApiLogOptimizer \
-        -Dversion=0.0.1-SNAPSHOT \
-        -Dpackaging=jar \
-        -Dfile=target/ShellApiLogOptimizer-0.0.1-SNAPSHOT.jar \
-        -DrepositoryId=github \
-        -Durl=https://maven.pkg.github.com/${{ github.repository }} \
-        -DgeneratePom=true
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        server-id: github
+        settings-path: ${{ github.workspace }}
+
+    - name: Publish package
+      run: mvn --batch-mode deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
