--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,12 +20,17 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
     
+    - name: Get artifact path
+      id: get_artifact
+      run: |
+        echo "ARTIFACT_PATH=$(ls target/ShellApiLogOptimizer-*.jar | head -n 1)" >> $GITHUB_OUTPUT
+
     - name: Upload JAR
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./target/ShellApiLogOptimizer-0.0.1-SNAPSHOT.jar
+        asset_path: ${{ steps.get_artifact.outputs.ARTIFACT_PATH }}
         asset_name: ShellApiLogOptimizer-${{ github.ref_name }}.jar
         asset_content_type: application/java-archive
