--- a/docker-compose/environment/docker-compose.yml
+++ b/docker-compose/environment/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3'
 services:
   elasticsearch:
-    build: ..
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
+    build:
+      context: .
+      dockerfile: Dockerfile-elasticsearch
+    image: custom-elasticsearch:7.14.0
     container_name: elasticsearch
     environment:
       - node.name=es01
@@ -17,12 +19,45 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ./data:/usr/share/elasticsearch/data
+      - ./es_data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
       - 9300:9300
     networks:
-      - esnet
+      - elk
+
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.14.0
+    container_name: logstash
+    volumes:
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+    ports:
+      - "5000:5000/tcp"
+      - "5000:5000/udp"
+      - "9600:9600"
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.14.0
+    container_name: kibana
+    ports:
+      - 5601:5601
+    environment:
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
+      ELASTICSEARCH_USERNAME: elastic
+      ELASTICSEARCH_PASSWORD: YourElasticPassword
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
 
 networks:
-  esnet:
+  elk:
+    driver: bridge
