feat: 日志文件整合到ELK

--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -5,7 +5,28 @@ input {
 }
 
 filter {
-  # 在这里添加你的过滤器配置
+  grok {
+    match => { "message" => "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{GREEDYDATA:content}$" }
+  }
+
+  if [log_level] == "GIN" {
+    grok {
+      match => { "content" => "%{DATA:request_id} \| %{NUMBER:status_code} \| %{DATA:duration} \| %{IP:client_ip} \| %{WORD:http_method} %{GREEDYDATA:request_path}" }
+    }
+  } else if [log_level] == "INFO" {
+    grok {
+      match => { "content" => "%{DATA:request_id} \| %{GREEDYDATA:info_message}" }
+    }
+  }
+
+  date {
+    match => [ "timestamp", "yyyy/MM/dd - HH:mm:ss" ]
+    target => "@timestamp"
+  }
+
+  mutate {
+    remove_field => [ "message" ]
+  }
 }
 
 output {
