--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -5,37 +5,40 @@ input {
 }
 
 filter {
-  if [log_type] == "shellapi" {
-    grok {
-      match => { "message" => "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{GREEDYDATA:content}$" }
-    }
+  grok {
+    match => { "message" => "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{GREEDYDATA:content}$" }
+    tag_on_failure => ["_grokparsefailure"]
+    add_field => { "grok_matched" => "true" }
+  }
 
+  if [grok_matched] == "true" {
     if [log_level] == "GIN" {
       grok {
         match => { "content" => "%{DATA:request_id} \| %{NUMBER:status_code} \| %{DATA:duration} \| %{IP:client_ip} \| %{WORD:http_method} %{GREEDYDATA:request_path}" }
       }
-    } else if [log_level] == "INFO" {
+    } else if [log_level] in ["SYS", "ERR", "INFO"] {
       grok {
-        match => { "content" => "%{DATA:request_id} \| %{GREEDYDATA:info_message}" }
+        match => { "content" => "(?:%{DATA:request_id} \|)? %{GREEDYDATA:info_message}" }
       }
     }
+  }
 
-    date {
-      match => [ "timestamp", "yyyy/MM/dd - HH:mm:ss" ]
-      target => "@timestamp"
-    }
+  date {
+    match => [ "timestamp", "yyyy/MM/dd - HH:mm:ss" ]
+    target => "@timestamp"
+  }
 
-    mutate {
-      remove_field => [ "message" ]
-    }
+  mutate {
+    remove_field => [ "ecs", "agent", "input" ]
   }
 }
 
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => ["http://elasticsearch:9200"]
     user => "elastic"
     password => "YourElasticPassword"
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+    index => "filebeat-%{+YYYY.MM.dd}"
   }
+  stdout { codec => rubydebug }
 }
