--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -15,10 +15,12 @@ filter {
     if [log_level] == "GIN" {
       grok {
         match => { "content" => "%{DATA:request_id} \| %{NUMBER:status_code} \| %{DATA:duration} \| %{IP:client_ip} \| %{WORD:http_method} %{GREEDYDATA:request_path}" }
+        tag_on_failure => ["_gin_parse_failure"]
       }
     } else if [log_level] in ["SYS", "ERR", "INFO"] {
       grok {
         match => { "content" => "(?:%{DATA:request_id} \|)? %{GREEDYDATA:info_message}" }
+        tag_on_failure => ["_sys_parse_failure"]
       }
     }
   }
