--- a/docker-compose/environment/docker-compose.yml
+++ b/docker-compose/environment/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     image: docker.elastic.co/logstash/logstash:7.14.0
     container_name: logstash
     volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
       - ./logstash/logs:/usr/share/logstash/logs
     ports:
       - "5044:5044"
@@ -40,7 +40,6 @@ services:
       - "9600:9600"
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
-      # 新增：设置日志级别为 DEBUG
       LOG_LEVEL: "debug"
     networks:
       - elk
