--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -6,7 +6,12 @@ input {
 
 filter {
   grok {
-    match => { "message" => "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{GREEDYDATA:content}$" }
+    match => {
+      "message" => [
+        "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{DATA:request_id} \| %{GREEDYDATA:content}$",
+        "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{GREEDYDATA:content}$"
+      ]
+    }
     tag_on_failure => ["_grokparsefailure"]
     add_field => { "grok_matched" => "true" }
   }
@@ -14,13 +19,13 @@ filter {
   if [grok_matched] == "true" {
     if [log_level] == "GIN" {
       grok {
-        match => { "content" => "%{DATA:request_id} \| %{NUMBER:status_code} \| %{DATA:duration} \| %{IP:client_ip} \| %{WORD:http_method} %{GREEDYDATA:request_path}" }
+        match => { "content" => "%{DATA:request_id} \| %{NUMBER:status_code:int} \| %{DATA:duration} \| %{IP:client_ip} \| %{WORD:http_method} %{GREEDYDATA:request_path}" }
         tag_on_failure => ["_gin_parse_failure"]
       }
-    } else if [log_level] in ["SYS", "ERR", "INFO"] {
+    } else if [log_level] == "INFO" {
       grok {
-        match => { "content" => "(?:%{DATA:request_id} \|)? %{GREEDYDATA:info_message}" }
-        tag_on_failure => ["_sys_parse_failure"]
+        match => { "content" => "record consume log: %{GREEDYDATA:info_message}" }
+        tag_on_failure => ["_info_parse_failure"]
       }
     }
   }
