--- a/docker-compose/environment/docker-compose.yml
+++ b/docker-compose/environment/docker-compose.yml
@@ -30,9 +30,8 @@ services:
     image: docker.elastic.co/logstash/logstash:7.14.0
     container_name: logstash
     volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
-      - ./logstash/pipeline:/usr/share/logstash/pipeline
-      - ./logstash/logs:/usr/share/logstash/logs
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
     ports:
       - "5044:5044"
       - "5000:5000/tcp"
