fix: logstash.conf

--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -27,16 +27,30 @@ filter {
         match => { "content" => "record consume log: %{GREEDYDATA:info_message}" }
         tag_on_failure => ["_info_parse_failure"]
       }
+    } else if [log_level] == "SYS" {
+      # SYS 日志不需要进一步解析，直接使用 content 字段
     }
+  }
+
+  # 解码 UTF-8 字符
+  ruby {
+    code => "
+      event.to_hash.each do |key, value|
+        if value.is_a?(String)
+          event.set(key, value.gsub(/\[0x([0-9a-f]{2})\]/) { $1.to_i(16).chr }.force_encoding('UTF-8'))
+        end
+      end
+    "
   }
 
   date {
     match => [ "timestamp", "yyyy/MM/dd - HH:mm:ss" ]
     target => "@timestamp"
+    remove_field => ["timestamp"]
   }
 
   mutate {
-    remove_field => [ "ecs", "agent", "input" ]
+    remove_field => [ "ecs", "agent", "input", "grok_matched" ]
   }
 }
 
