fix: logstash.conf

--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -12,7 +12,7 @@ filter {
         "^\[%{WORD:log_level}\] %{TIMESTAMP_ISO8601:timestamp} \| %{GREEDYDATA:content}$"
       ]
     }
-    tag_on_failure => ["_grokparsefailure"]
+    tag_on_failure => ["_initial_grok_failure"]
     add_field => { "grok_matched" => "true" }
   }
 
@@ -24,7 +24,7 @@ filter {
       }
     } else if [log_level] == "INFO" {
       grok {
-        match => { "content" => "record consume log: %{GREEDYDATA:info_message}" }
+        match => { "content" => "record consume log: userId=%{NUMBER:user_id:int}, channelId=%{NUMBER:channel_id:int}, promptTokens=%{NUMBER:prompt_tokens:int}, completionTokens=%{NUMBER:completion_tokens:int}, modelName=%{DATA:model_name}, tokenName=%{DATA:token_name}, quota=%{NUMBER:quota:int},(?:totalDuration|requestDuration)=%{NUMBER:duration:int}, content=%{GREEDYDATA:consume_content}" }
         tag_on_failure => ["_info_parse_failure"]
       }
     } else if [log_level] == "SYS" {
@@ -37,7 +37,8 @@ filter {
     code => "
       event.to_hash.each do |key, value|
         if value.is_a?(String)
-          event.set(key, value.gsub(/\[0x([0-9a-f]{2})\]/) { $1.to_i(16).chr }.force_encoding('UTF-8'))
+          decoded = value.gsub(/\[0x([0-9a-f]{2})\]/) { $1.to_i(16).chr }.force_encoding('UTF-8')
+          event.set(key, decoded)
         end
       end
     "
