fix: date format

--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -8,7 +8,7 @@ filter {
   grok {
     match => {
       "message" => [
-        "\[%{WORD:log_level}\] %{YEAR:year}/%{MONTHNUM:month}/%{MONTHDAY:day} - %{HOUR:hour}:%{MINUTE:minute}:%{SECOND:second} \| %{DATA:transaction_id} \| %{GREEDYDATA:content}",
+        "\[%{WORD:log_level}\] %{YEAR:year}/%{MONTHNUM:month}/%{MONTHDAY:day} - %{HOUR:hour}:%{MINUTE:minute}:%{SECOND:second} \| %{DATA:request_id} \| %{GREEDYDATA:content}",
         "\[%{WORD:log_level}\] %{YEAR:year}/%{MONTHNUM:month}/%{MONTHDAY:day} - %{HOUR:hour}:%{MINUTE:minute}:%{SECOND:second} \| %{GREEDYDATA:content}"
       ]
     }
