--- a/docker-compose/environment/logstash/pipeline/logstash.conf
+++ b/docker-compose/environment/logstash/pipeline/logstash.conf
@@ -55,7 +55,7 @@ output {
     hosts => ["http://elasticsearch:9200"]
     user => "elastic"
     password => "YourElasticPassword"
-    index => "%{[@metadata][system_id]}-filebeat-%{+YYYY.MM.dd}"
+    index => "%{[system_id]}-filebeat-%{+YYYY.MM.dd}"
   }
   stdout { codec => rubydebug }
 }
