--- a/docker-compose/filebeat/docker-compose.yml
+++ b/docker-compose/filebeat/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     image: docker.elastic.co/beats/filebeat:7.14.0
     volumes:
       - ./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - /path/to/your/logs:/var/log/your_app:ro
+      - /root/shellapi/logs:/root/shellapi/logs:ro
+      - /root/shellapi35/logs:/root/shellapi35/logs:ro
+      - /root/shellapi40/logs:/root/shellapi40/logs:ro
     command: filebeat -e -strict.perms=false
     restart: unless-stopped
     network_mode: host
