--- a/docker-compose/environment/Dockerfile-elasticsearch
+++ b/docker-compose/environment/Dockerfile-elasticsearch
@@ -1,2 +1,2 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:7.14.0
-RUN bin/elasticsearch-plugin install --batch https://github.com/medcl/elasticsearch-analysis-ik/releases/download/v7.14.0/elasticsearch-analysis-ik-7.14.0.zip
+RUN bin/elasticsearch-plugin install --batch https://release.infinilabs.com/analysis-ik/stable/elasticsearch-analysis-ik-7.14.0.zip
