feat: 框架升级 fix: 修复not in 查询的问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ easy-es.enable=true
 easy-es.address=localhost:9200
 easy-es.username=elastic
 easy-es.password=YourElasticPassword
+easy-es.global-config.print-dsl=true
+easy-es.show-dsl=true
