--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,9 @@
 
 		<!-- Easy ES -->
 		<dependency>
-			<groupId>cn.easy-es</groupId>
+			<groupId>org.dromara.easy-es</groupId>
 			<artifactId>easy-es-boot-starter</artifactId>
-			<version>2.0.0-beta1</version>
+			<version>2.0.0-beta8</version>
 		</dependency>
 
 		<!-- Lombok -->
